logs/web3.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Crypto'...
Listing './lib/python3.5/site-packages/Crypto/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/Hash'...
Listing './lib/python3.5/site-packages/Crypto/IO'...
Listing './lib/python3.5/site-packages/Crypto/Math'...
Listing './lib/python3.5/site-packages/Crypto/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Crypto/Signature'...
Listing './lib/python3.5/site-packages/Crypto/Util'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cytoolz'...
Listing './lib/python3.5/site-packages/cytoolz/curried'...
Listing './lib/python3.5/site-packages/cytoolz/tests'...
Listing './lib/python3.5/site-packages/cytoolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/eth_abi'...
Listing './lib/python3.5/site-packages/eth_abi/utils'...
Listing './lib/python3.5/site-packages/eth_abi-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/eth_keyfile'...
Listing './lib/python3.5/site-packages/eth_keyfile-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/eth_keys'...
Listing './lib/python3.5/site-packages/eth_keys/backends'...
Listing './lib/python3.5/site-packages/eth_keys/backends/native'...
Listing './lib/python3.5/site-packages/eth_keys/utils'...
Listing './lib/python3.5/site-packages/eth_keys-0.1.0b4.dist-info'...
Listing './lib/python3.5/site-packages/eth_tester'...
Listing './lib/python3.5/site-packages/eth_tester/backends'...
Listing './lib/python3.5/site-packages/eth_tester/backends/mock'...
Listing './lib/python3.5/site-packages/eth_tester/backends/pyethereum'...
Listing './lib/python3.5/site-packages/eth_tester/backends/pyethereum/v16'...
Listing './lib/python3.5/site-packages/eth_tester/backends/pyethereum/v20'...
Listing './lib/python3.5/site-packages/eth_tester/backends/pyevm'...
Listing './lib/python3.5/site-packages/eth_tester/normalization'...
Listing './lib/python3.5/site-packages/eth_tester/utils'...
Listing './lib/python3.5/site-packages/eth_tester/utils/six'...
Listing './lib/python3.5/site-packages/eth_tester/validation'...
Listing './lib/python3.5/site-packages/eth_tester-0.1.0b11.dist-info'...
Listing './lib/python3.5/site-packages/eth_utils'...
Listing './lib/python3.5/site-packages/eth_utils/encoding'...
Listing './lib/python3.5/site-packages/eth_utils-0.7.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycryptodome-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/pylru-1.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pysha3-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rlp'...
Listing './lib/python3.5/site-packages/rlp/sedes'...
Listing './lib/python3.5/site-packages/rlp-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/semantic_version'...
Listing './lib/python3.5/site-packages/semantic_version-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tlz'...
Listing './lib/python3.5/site-packages/toolz'...
Listing './lib/python3.5/site-packages/toolz/curried'...
Listing './lib/python3.5/site-packages/toolz/sandbox'...
Listing './lib/python3.5/site-packages/toolz/tests'...
Listing './lib/python3.5/site-packages/toolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/web3'...
Listing './lib/python3.5/site-packages/web3/middleware'...
Listing './lib/python3.5/site-packages/web3/providers'...
Listing './lib/python3.5/site-packages/web3/providers/eth_tester'...
Listing './lib/python3.5/site-packages/web3/utils'...
Listing './lib/python3.5/site-packages/web3/utils/compat'...
Compiling './lib/python3.5/site-packages/web3/utils/exception_py2.py'...
***   File "./lib/python3.5/site-packages/web3/utils/exception_py2.py", line 5
    raise my_exception, None, sys.exc_info()[2]  # noqa: ignore=W602, E999
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/web3/utils/module_testing'...
Listing './lib/python3.5/site-packages/web3/utils/six'...
Listing './lib/python3.5/site-packages/web3-3.16.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
